--- a/modules/openapi-generator/src/main/resources/swift-alt/api.mustache
+++ b/modules/openapi-generator/src/main/resources/swift-alt/api.mustache
@@ -65,30 +65,28 @@ open class {{classname}} {
     }
     {{/vendorExtensions.x-swift-custom-error-type}}
 
-    /**
     {{#summary}}
-        {{{.}}}
+    /// {{{.}}}
     {{/summary}}
-        - {{httpMethod}} {{{path}}}{{#notes}}
-        - {{{.}}}{{/notes}}{{#subresourceOperation}}
-        - subresourceOperation: {{.}}{{/subresourceOperation}}{{#defaultResponse}}
-        - defaultResponse: {{.}}{{/defaultResponse}}
+    /// - {{httpMethod}} {{{path}}}{{#notes}}
+    /// - {{{.}}}{{/notes}}{{#subresourceOperation}}
+    /// - subresourceOperation: {{.}}{{/subresourceOperation}}{{#defaultResponse}}
+    /// - defaultResponse: {{.}}{{/defaultResponse}}
     {{#authMethods}}
-        - {{#isBasic}}BASIC{{/isBasic}}{{#isOAuth}}OAuth{{/isOAuth}}{{#isApiKey}}API Key{{/isApiKey}}:
-        - type: {{type}}{{#keyParamName}} {{keyParamName}} {{#isKeyInQuery}}(QUERY){{/isKeyInQuery}}{{#isKeyInHeaer}}(HEADER){{/isKeyInHeaer}}{{/keyParamName}}
-        - name: {{name}}
+    /// - {{#isBasic}}BASIC{{/isBasic}}{{#isOAuth}}OAuth{{/isOAuth}}{{#isApiKey}}API Key{{/isApiKey}}:
+    /// - type: {{type}}{{#keyParamName}} {{keyParamName}} {{#isKeyInQuery}}(QUERY){{/isKeyInQuery}}{{#isKeyInHeaer}}(HEADER){{/isKeyInHeaer}}{{/keyParamName}}
+    /// - name: {{name}}
     {{/authMethods}}
     {{#hasResponseHeaders}}
-        - responseHeaders: [{{#responseHeaders}}{{{baseName}}}({{{dataType}}}){{^-last}}, {{/-last}}{{/responseHeaders}}]
+    /// - responseHeaders: [{{#responseHeaders}}{{{baseName}}}({{{dataType}}}){{^-last}}, {{/-last}}{{/responseHeaders}}]
     {{/hasResponseHeaders}}
     {{#externalDocs}}
-        - externalDocs: {{.}}
+    /// - externalDocs: {{.}}
     {{/externalDocs}}
     {{#allParams}}
-        - parameter {{paramName}}: ({{#isFormParam}}form{{/isFormParam}}{{#isQueryParam}}query{{/isQueryParam}}{{#isPathParam}}path{{/isPathParam}}{{#isHeaderParam}}header{{/isHeaderParam}}{{#isBodyParam}}body{{/isBodyParam}}) {{description}} {{^required}}(optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/required}}
+    /// - parameter {{paramName}}: ({{#isFormParam}}form{{/isFormParam}}{{#isQueryParam}}query{{/isQueryParam}}{{#isPathParam}}path{{/isPathParam}}{{#isHeaderParam}}header{{/isHeaderParam}}{{#isBodyParam}}body{{/isBodyParam}}) {{description}} {{^required}}(optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/required}}
     {{/allParams}}
-        - returns: AnyPublisher<{{{returnType}}}{{^returnType}}Void{{/returnType}}, Error> {{description}}
-        */
+    /// - returns: AnyPublisher<{{{returnType}}}{{^returnType}}Void{{/returnType}}, Error> {{description}}
     open func {{operationId}}({{#allParams}}{{paramName}}: {{{dataType}}}{{^required}}? = nil{{/required}}{{^-last}}, {{/-last}}{{/allParams}}) -> AnyPublisher<{{{returnType}}}{{^returnType}}Void{{/returnType}}, Error> {
         Deferred {
             Result<URLRequest, Error> {
