--- a/modules/openapi-generator/src/main/resources/swift-alt/OpenAPITransport.mustache
+++ b/modules/openapi-generator/src/main/resources/swift-alt/OpenAPITransport.mustache
@@ -63,7 +63,7 @@ final class DefaultURLRequestProcessor: URLRequestProcessor {
 
 // MARK: - OpenAPITransport
 
-public protocol OpenAPITransport {
+public protocol OpenAPITransport: AnyObject {
     var baseURL: URL? { get }
 
     func send(
