fix: add value matching with ignore case syntax

--- a/modules/openapi-generator/src/main/resources/JavaPlayFramework/enumClass.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaPlayFramework/enumClass.mustache
@@ -35,7 +35,7 @@
     @JsonCreator
     public static {{{datatypeWithEnum}}}{{^datatypeWithEnum}}{{{classname}}}{{/datatypeWithEnum}} fromValue({{{dataType}}} value) {
       for ({{{datatypeWithEnum}}}{{^datatypeWithEnum}}{{{classname}}}{{/datatypeWithEnum}} b : {{{datatypeWithEnum}}}{{^datatypeWithEnum}}{{{classname}}}{{/datatypeWithEnum}}.values()) {
-        if (b.value.equals(value)) {
+        if (b.value.equalsIgnoreCase(value)) {
           return b;
         }
       }
