--- a/modules/openapi-generator/src/main/resources/java-micronaut/common/model/modelEnum.mustache
+++ b/modules/openapi-generator/src/main/resources/java-micronaut/common/model/modelEnum.mustache
@@ -47,7 +47,7 @@ import com.fasterxml.jackson.annotation.JsonValue;
     {{/jackson}}
     public static {{#datatypeWithEnum}}{{{.}}}{{/datatypeWithEnum}}{{^datatypeWithEnum}}{{{classname}}}{{/datatypeWithEnum}} fromValue({{{dataType}}} value) {
         for ({{#datatypeWithEnum}}{{{.}}}{{/datatypeWithEnum}}{{^datatypeWithEnum}}{{{classname}}}{{/datatypeWithEnum}} b : {{#datatypeWithEnum}}{{{.}}}{{/datatypeWithEnum}}{{^datatypeWithEnum}}{{{classname}}}{{/datatypeWithEnum}}.values()) {
-            if (b.value.equals(value)) {
+            if (b.value.equalsIgnoreCase(value)) {
                 return b;
             }
         }
