--- a/modules/openapi-generator/src/main/resources/JavaJaxRS/cxf-ext/enumClass.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaJaxRS/cxf-ext/enumClass.mustache
@@ -26,7 +26,7 @@
 
     public static {{datatypeWithEnum}} fromValue({{dataType}} value) {
         for ({{{datatypeWithEnum}}}{{^datatypeWithEnum}}{{{classname}}}{{/datatypeWithEnum}} b : {{{datatypeWithEnum}}}{{^datatypeWithEnum}}{{{classname}}}{{/datatypeWithEnum}}.values()) {
-            if (b.value.equalsIgnoreCase(value)) {
+            if (b.value.{{^isString}}equals{{/isString}}{{#isString}}equalsIgnoreCase{{/isString}}(value)) {
                 return b;
             }
         }
