--- a/modules/openapi-generator/src/main/resources/java-micronaut/common/model/modelInnerEnum.mustache
+++ b/modules/openapi-generator/src/main/resources/java-micronaut/common/model/modelInnerEnum.mustache
@@ -46,7 +46,7 @@
     {{/jackson}}
         public static {{#datatypeWithEnum}}{{{.}}}{{/datatypeWithEnum}}{{^datatypeWithEnum}}{{{classname}}}{{/datatypeWithEnum}} fromValue({{{dataType}}} value) {
             for ({{#datatypeWithEnum}}{{{.}}}{{/datatypeWithEnum}}{{^datatypeWithEnum}}{{{classname}}}{{/datatypeWithEnum}} b : {{#datatypeWithEnum}}{{{.}}}{{/datatypeWithEnum}}{{^datatypeWithEnum}}{{{classname}}}{{/datatypeWithEnum}}.values()) {
-                if (b.value.equalsIgnoreCase(value)) {
+                if (b.value.{{^isString}}equals{{/isString}}{{#isString}}equalsIgnoreCase{{/isString}}(value)) {
                     return b;
                 }
             }
