--- a/modules/openapi-generator/src/main/resources/go/model_anyof.mustache
+++ b/modules/openapi-generator/src/main/resources/go/model_anyof.mustache
@@ -1,7 +1,7 @@
 // {{classname}} {{{description}}}{{^description}}struct for {{{classname}}}{{/description}}
 type {{classname}} struct {
 	{{#anyOf}}
-	{{{.}}} *{{{.}}}
+	{{#lambda.type-to-name}}{{{.}}}{{/lambda.type-to-name}} *{{{.}}}
 	{{/anyOf}}
 }
 
@@ -15,47 +15,18 @@ func (dst *{{classname}}) UnmarshalJSON(data []byte) error {
 	}
 
 	{{/isNullable}}
-	{{#discriminator}}
-	{{#mappedModels}}
-	{{#-first}}
-	// use discriminator value to speed up the lookup
-	var jsonDict map[string]interface{}
-	err = json.Unmarshal(data, &jsonDict)
-	if err != nil {
-		return fmt.Errorf("failed to unmarshal JSON into map for the discriminator lookup")
-	}
-
-	{{/-first}}
-	// check if the discriminator value is '{{{mappingName}}}'
-	if jsonDict["{{{propertyBaseName}}}"] == "{{{mappingName}}}" {
-		// try to unmarshal JSON data into {{{modelName}}}
-		err = json.Unmarshal(data, &dst.{{{modelName}}});
-		if err == nil {
-			json{{{modelName}}}, _ := json.Marshal(dst.{{{modelName}}})
-			if string(json{{{modelName}}}) == "{}" { // empty struct
-				dst.{{{modelName}}} = nil
-			} else {
-				return nil // data stored in dst.{{{modelName}}}, return on the first match
-			}
-		} else {
-			dst.{{{modelName}}} = nil
-		}
-	}
-
-	{{/mappedModels}}
-	{{/discriminator}}
 	{{#anyOf}}
 	// try to unmarshal JSON data into {{{.}}}
-	err = json.Unmarshal(data, &dst.{{{.}}});
+	err = json.Unmarshal(data, &dst.{{#lambda.type-to-name}}{{{.}}}{{/lambda.type-to-name}});
 	if err == nil {
-		json{{{.}}}, _ := json.Marshal(dst.{{{.}}})
-		if string(json{{{.}}}) == "{}" { // empty struct
-			dst.{{{.}}} = nil
+		json{{#lambda.type-to-name}}{{{.}}}{{/lambda.type-to-name}}, _ := json.Marshal(dst.{{#lambda.type-to-name}}{{{.}}}{{/lambda.type-to-name}})
+		if string(json{{#lambda.type-to-name}}{{{.}}}{{/lambda.type-to-name}}) == "{}" { // empty struct
+			dst.{{#lambda.type-to-name}}{{{.}}}{{/lambda.type-to-name}} = nil
 		} else {
-			return nil // data stored in dst.{{{.}}}, return on the first match
+			return nil // data stored in dst.{{#lambda.type-to-name}}{{{.}}}{{/lambda.type-to-name}}, return on the first match
 		}
 	} else {
-		dst.{{{.}}} = nil
+		dst.{{#lambda.type-to-name}}{{{.}}}{{/lambda.type-to-name}} = nil
 	}
 
 	{{/anyOf}}
@@ -65,8 +36,8 @@ func (dst *{{classname}}) UnmarshalJSON(data []byte) error {
 // Marshal data from the first non-nil pointers in the struct to JSON
 func (src *{{classname}}) MarshalJSON() ([]byte, error) {
 {{#anyOf}}
-	if src.{{{.}}} != nil {
-		return json.Marshal(&src.{{{.}}})
+	if src.{{#lambda.type-to-name}}{{{.}}}{{/lambda.type-to-name}} != nil {
+		return json.Marshal(&src.{{#lambda.type-to-name}}{{{.}}}{{/lambda.type-to-name}})
 	}
 
 {{/anyOf}}
